--- a/it_blog/it_blog/templates/base.html
+++ b/it_blog/it_blog/templates/base.html
@@ -26,8 +26,13 @@
 
 <body>
 {% include "base/header.html" %}
+{% block banner_area %}
 {% include "base/banner_area.html" %}
+{% endblock banner_area %}
+{% block feature_area  %}
 {% include "base/feature_area.html" %}
+{% endblock feature_area %}
+{% block all_blogs %}{% endblock all_blogs %}
 {% block home %}{% endblock home %}
 {% include "base/footer.html" %}
 
