forms and admin

--- a/it_blog/it_blog/templates/base.html
+++ b/it_blog/it_blog/templates/base.html
@@ -34,6 +34,7 @@
 {% endblock feature_area %}
 {% block all_blogs %}{% endblock all_blogs %}
 {% block home %}{% endblock home %}
+{% block user %}{% endblock user %}
 {% include "base/footer.html" %}
 
 
